fix scrollbar radius

--- a/css/scrollbar.css
+++ b/css/scrollbar.css
@@ -1,30 +1,30 @@
 :root {
-    --track-color: #e2e8f0;
-    --thumb-color: #0066ff;
-    --scrollbar-width: 16px;
-    --scrollbar-radius: 20px;
-    --scrollbar-width-moz: thin;
+	--track-color: #e2e8f0;
+	--thumb-color: #0066ff;
+	--scrollbar-width: 16px;
+	--scrollbar-radius: 20px;
+	--scrollbar-width-moz: thin;
 }
 
 /* Chrome, Edge, Safari */
 body::-webkit-scrollbar {
-    width: var(--scrollbar-width);
+	width: var(--scrollbar-width);
 }
 
 body::-webkit-scrollbar-thumb {
-    background-color: var(--thumb-color);
-    border-radius: var(--scrollbar-radius);
+	background-color: var(--thumb-color);
+	/* border-radius: var(--scrollbar-radius); */
 }
 
 body::-webkit-scrollbar-track {
-    background-color: var(--track-color);
+	background-color: var(--track-color);
 }
 
 
 /* Firefox */
 @supports not selector(::-webkit-scrollbar) {
-    * {
-        scrollbar-width: var(--scrollbar-width-moz);
-        scrollbar-color: var(--thumb-color) var(--track-color);
-    }
+	* {
+		scrollbar-width: var(--scrollbar-width-moz);
+		scrollbar-color: var(--thumb-color) var(--track-color);
+	}
 }
